# impartial-ord-rs

./: Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  lint-n-test.yml
compilation-test/: Cargo.toml
compilation-test/src/: lib.rs
src/: lib.rs
