# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "rs-lib-template-repo"
version = "0.1.0"
edition = "2021"
publish = false
#rust-version = "0.69.420"
authors = [
  "Alorel <amolc@pm.me>",
]
license = "MIT"
readme = "README.md"
description = "Shame - I haven't changed the template description"
repository = "https://github.com/Alorel/XXX"
keywords = []
categories = []
include = [
  "src/",
  "Cargo.toml",
]

[features]

[dependencies]
